--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Bu Bizim İlk Github Projemiz</h1>
     <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor, 
         sit amet consectetur adipisicing elit. Quod, rerum.</p>
+        <h2>Bu Sonradan Ekelen Başlıktır</h2>
         <script src="app.js"></script>
 </body>
 </html>
