--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor, 
         sit amet consectetur adipisicing elit. Quod, rerum.</p>
         <h2>Bu Sonradan Ekelen Başlıktır</h2>
+        <img src="https://picsum.photos/seed/picsum/200/300" alt="">
         <script src="app.js"></script>
 </body>
 </html>
